[metadata]
name = zogn
version = attr: zogn.__version__
author = attr: zogn.__author__
description = 一款静态博客生成器
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    TOML
    Python-Slugify
    Flask
    click
    markdown
    PyYAML


[options.packages.find]
where = src

[options.extras_require]
docs = sphinx

[options.entry_points]
console_scripts =
    zogn = zogn.main:cli


