[metadata]
name = zogn
version = 0.5
author = chenn
description = 一款静态博客生成器
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    toml
    python-slugify
    flask
    click
    markdown
    PyYAML
    mistune==2.0.5
    pillow==10.2.0
    python-dateutil==2.8.2
    beautifulsoup4==4.12.2
    csscompressor==0.9.5
    feedgen==0.9.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    zogn = zogn.main:cli


